--- a/rgbed/Cargo.toml
+++ b/rgbed/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 text_io = "0.1.13"
-env_logger = "0.11.8"
 console = { path = "../console" }
+log = "0.4.27"
+env_logger = "0.11.8"
