--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "3"
-members = [ "console", "ppu", "rgbe", "rgbed"]
+members = [ "console", "constants", "ppu", "rgbe", "rgbed"]
