--- a/console/Cargo.toml
+++ b/console/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 env_logger = "0.11.8"
 log = "0.4.27"
 ppu = { path = "../ppu" }
+constants = { path = "../constants" }
 
 [features]
 debugger = []
