--- a/rgbed/Cargo.toml
+++ b/rgbed/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 text_io = "0.1.13"
 console = { path = "../console", features = ["debugger"] }
+constants = { path = "../constants" }
 log = "0.4.27"
 env_logger = "0.11.8"
 
