--- a/console/Cargo.toml
+++ b/console/Cargo.toml
@@ -8,6 +8,7 @@ env_logger = "0.11.8"
 log = "0.4.27"
 ppu = { path = "../ppu" }
 constants = { path = "../constants" }
+clock = { path = "../clock" }
 paste = "1.0.15"
 
 [features]
